force-app/main/default/objects/Application_out__e/Application_out__e.object-meta.xml
<CustomObject>
    <label>Application - out</label>
    <pluralLabel>Applications - out</pluralLabel>
</CustomObject>