force-app/main/default/objects/Application_out__e/fields/Application_DomainId__c.field-meta.xml
<CustomField>
    <fullName>Application_DomainId__c</fullName>
    <label>Application DomainId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>