force-app/main/default/objects/Application_out__e/fields/Commission_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Commission_Entity_Id__c</fullName>
    <label>Commission Entity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>